Defect DEF2296 fixed

--- a/src/app/utils/structure-field/structure-field.component.html
+++ b/src/app/utils/structure-field/structure-field.component.html
@@ -50,7 +50,7 @@
                         ngbTooltip="Unique">U</span>
                     <span
                         class="ml-2 rounded-circle properties password d-flex justify-content-center align-items-center text-white fw-500 font-12"
-                        *ngIf="form.get('properties.password') && form.get('properties.password').value"
+                        *ngIf="(form.get('properties.password') && form.get('properties.password').value) || (checkSubType())"
                         ngbTooltip="Secure">S</span>
                     <span class="ml-2 advanced-badge hover"
                         *ngIf="form.get('properties.pattern') && form.get('properties.pattern').value">
