--- a/src/app/utils/data-structure-selector/data-structure-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-structure-selector.component.html
@@ -4,19 +4,23 @@
         </odp-round-radio>
         <span class="text ml-3">Generic</span>
     </div>
-    <div class="d-flex align-items-center justify-content-start w-100 mb-2">
-        <odp-round-radio [edit]="edit" [checked]="selectedType == 'dataFormat'"
-            (checkedChange)="onTypeChange('dataFormat')">
-        </odp-round-radio>
-        <span class="text ml-3">Data Schema</span>
-        <span *ngIf="format && selectedType=='dataFormat'" class="text-primary ml-3">({{format.name}})</span>
+    <div class="d-flex flex-column w-100 mb-2">
+        <div class="d-flex align-items-center justify-content-start w-100">
+            <odp-round-radio [edit]="edit" [checked]="selectedType == 'dataFormat'"
+                (checkedChange)="onTypeChange('dataFormat')">
+            </odp-round-radio>
+            <span class="text ml-3">Data Schema</span>
+        </div>
+        <span *ngIf="format && selectedType=='dataFormat'" class="text-primary selected-format-name">({{format.name}})</span>
     </div>
-    <div class="d-flex align-items-center justify-content-start w-100 mb-2">
-        <odp-round-radio [edit]="edit" [checked]="selectedType == 'customFormat'"
-            (checkedChange)="onTypeChange('customFormat')">
-        </odp-round-radio>
-        <span class="text ml-3">Custom</span>
-        <span *ngIf="format && selectedType=='customFormat'" class="text-primary ml-3">({{format.name}})</span>
+    <div class="d-flex flex-column w-100 mb-2">
+        <div class="d-flex align-items-center justify-content-start w-100">
+            <odp-round-radio [edit]="edit" [checked]="selectedType == 'customFormat'"
+                (checkedChange)="onTypeChange('customFormat')">
+            </odp-round-radio>
+            <span class="text ml-3">Custom</span>
+        </div>
+        <span *ngIf="format && selectedType=='customFormat'" class="text-primary selected-format-name">({{format.name}})</span>
     </div>
 </div>
 
