--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -100,28 +100,39 @@
       <span class="font-20 fw-600">New Data Format</span>
       <span class="dsi dsi-close hover" (click)="showNewDataFormatWindow=false"></span>
     </div>
-    <div *ngIf="showNewDataFormatWindow" class="form-group">
-      <label for="name" class="font-13 text-secondary">
-        <span class="text">Name</span>
-        <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
-      </label>
-      <div class="name-wrapper position-relative">
-        <input newDataFormatName type="text" class="form-control" id="name" placeholder="Untitled DataFormat"
-          formControlName="name" odpAutoFocus (keyup.enter)="triggerDataFormatCreate()"
-          [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
-        <ng-container *ngIf="form.get('name').dirty">
-          <span *ngIf="form.get('name').hasError('required')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-            ngbTooltip="Name is required"></span>
-          <span *ngIf="form.get('name').hasError('maxlength')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-            ngbTooltip="Name should be within 40 characters"></span>
-          <span *ngIf="form.get('name').hasError('pattern')"
-            class="text-danger position-absolute fa fa-exclamation-circle" container="body"
-            ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
-        </ng-container>
+    <ng-container *ngIf="showNewDataFormatWindow">
+      <div class="form-group">
+        <label for="name" class="font-13 text-secondary">
+          <span class="text">Name</span>
+          <sup class="text-danger font-normal" ngbTooltip="Mandatory field">*</sup>
+        </label>
+        <div class="name-wrapper position-relative">
+          <input newDataFormatName type="text" class="form-control" id="name" placeholder="Untitled DataFormat"
+            formControlName="name" odpAutoFocus (keyup.enter)="triggerDataFormatCreate()"
+            [ngClass]="{'is-invalid':form.get('name').invalid && form.get('name').dirty}">
+          <ng-container *ngIf="form.get('name').dirty">
+            <span *ngIf="form.get('name').hasError('required')"
+              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+              ngbTooltip="Name is required"></span>
+            <span *ngIf="form.get('name').hasError('maxlength')"
+              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+              ngbTooltip="Name should be within 40 characters"></span>
+            <span *ngIf="form.get('name').hasError('pattern')"
+              class="text-danger position-absolute fa fa-exclamation-circle" container="body"
+              ngbTooltip="Name can be only alphanumeric and can only contain spaces"></span>
+          </ng-container>
+        </div>
       </div>
-    </div>
+
+      <div class="d-flex flex-wrap mt-4">
+        <div class="format-select-list-item d-flex align-items-center mr-4 mb-2" *ngFor="let format of formatList"
+          (click)="selectFormat(format);">
+          <odp-round-radio class="mr-2" [edit]="{status:true}" [checked]="isFormatSelected(format)">
+          </odp-round-radio>
+          <odp-format-type-badge [data]="format"></odp-format-type-badge>
+        </div>
+      </div>
+    </ng-container>
   </div>
   <div class="d-flex align-self-end justify-content-end w-100 mt-auto">
     <button type="button" class="btn btn-primary w-100" id="newDataFormatModalYes" [disabled]="form.invalid"
