--- a/src/styles.scss
+++ b/src/styles.scss
@@ -951,6 +951,10 @@ $weights: 200,
     color: #FF4C82;
   }
 
+  .dsi-expand {
+    color: #FF4C82;
+  }
+
   .dsi-response {
     color: #2FC48F;
   }
