--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -40,6 +40,10 @@
                 <span class="node-icon dsi dsi-mapping"></span>
                 <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Mapping</span>
             </span>
+            <span *ngIf="node.type=='UNWIND'" class="d-flex align-items-center">
+                <span class="node-icon dsi dsi-expand"></span>
+                <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Unwind</span>
+            </span>
             <span *ngIf="node.type=='RESPONSE'" class="d-flex align-items-center">
                 <span class="node-icon dsi dsi-response"></span>
                 <span class="ml-3" [ngClass]="{'fw-500 text-accent':isNodeSelected}">Response</span>
@@ -97,6 +101,10 @@
         <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('MAPPING')">
             <span class="font-12 fw-400 dsi dsi-mapping mr-2"></span>
             <span class="font-12 fw-400">Mapping</span>
+        </div>
+        <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('UNWIND')">
+            <span class="font-11 fw-400 dsi dsi-expand mr-2"></span>
+            <span class="font-12 fw-400">Unwind</span>
         </div>
         <div class="node-options-item px-3 py-2 d-flex align-items-center hover" (click)="addNode('RESPONSE')">
             <span class="font-12 fw-400 dsi dsi-response mr-2"></span>
