--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -59,8 +59,8 @@
       </div>
       <div class="list-group-item d-flex align-items-center justify-content-start hover" (dblclick)="viewFunction(i)"
         *ngFor="let item of records;let i=index">
-        <div class="item-name fw-500">
-          <span class="ml-2 pl-1 text-dark">{{item.name}}</span>
+        <div class="item-name fw-500 d-flex align-items-center">
+          <span class="ml-2 pl-1 text-dark text-truncate" style="max-width: 190px;" [ngbTooltip]="item.name" placement="right">{{item.name}}</span>
           <span class="ml-2 version sub-heading font-11 text-uppercase">(v{{(item.version||1)}})</span>
           <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span>
         </div>
@@ -68,7 +68,7 @@
           <div class="sub-heading item-url pr-3 d-flex align-items-center">
             <span *ngIf="copied[item._id]" class="text-accent mr-2">Copied!</span>
             <span *ngIf="!copied[item._id]" class="dsi dsi-copy text-accent mr-2 hover" (click)="copyUrl(item)"></span>
-            <span class="text-truncate" [ngbTooltip]="item.url" container="body">{{item.url}}</span>
+            <span class="text-truncate" style="max-width: 280px;" [ngbTooltip]="item.url" container="body">{{item.url}}</span>
           </div>
           <div class="sub-heading item-status d-flex align-items-center">
             <span class="fa fa-circle mr-2" [ngClass]="getStatusClass(item)"></span>
