--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -187,31 +187,31 @@
         <div class="mt-5 d-flex flex-wrap mx-4">
             <button type="button"
                 class="download-option btn btn-white border d-flex align-items-center px-3 mx-1 mb-3 hover"
-                (click)="downloadAgentModalRef.close('windows-x64')">
+                (click)="downloadAgentModalRef.close('windows-amd64')">
                 <span class="fab fa-windows mr-2"></span>
                 <span class="text-dark fw-600 font-14">Windows - 64 Bit</span>
             </button>
             <button type="button"
                 class="download-option btn btn-white border d-flex align-items-center px-3 mx-1 mb-3 hover"
-                (click)="downloadAgentModalRef.close('linux-x64')">
+                (click)="downloadAgentModalRef.close('linux-amd64')">
                 <span class="fab fa-linux mr-2"></span>
                 <span class="text-dark fw-600 font-14">Linux - 64 Bit</span>
             </button>
             <button type="button"
                 class="download-option btn btn-white border d-flex align-items-center px-3 mx-1 mb-3 hover"
-                (click)="downloadAgentModalRef.close('darwin-x64')">
+                (click)="downloadAgentModalRef.close('darwin-amd64')">
                 <span class="fab fa-apple mr-2"></span>
                 <span class="text-dark fw-600 font-14">Mac OS - 64 Bit</span>
             </button>
             <button type="button"
                 class="download-option btn btn-white border d-flex align-items-center px-3 mx-1 mb-3 hover"
-                (click)="downloadAgentModalRef.close('windows-x32')">
+                (click)="downloadAgentModalRef.close('windows-386')">
                 <span class="fab fa-windows mr-2"></span>
                 <span class="text-dark fw-600 font-14">Windows - 32 Bit</span>
             </button>
             <button type="button"
                 class="download-option btn btn-white border d-flex align-items-center px-3 mx-1 mb-3 hover"
-                (click)="downloadAgentModalRef.close('linux-x32')">
+                (click)="downloadAgentModalRef.close('linux-386')">
                 <span class="fab fa-linux mr-2"></span>
                 <span class="text-dark fw-600 font-14">Linux - 32 Bit</span>
             </button>
