--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -160,7 +160,7 @@
             </label>
             <div class="name-wrapper position-relative">
                 <select class="custom-select" id="name" formControlName="type">
-                    <option value="API">API</option>
+                    <option value="API" selected>API</option>
                     <option value="FILE">FILE</option>
                     <option value="TIMER">TIMER</option>
                 </select>
