--- a/src/app/utils/data-structure-selector/data-structure-selector.component.html
+++ b/src/app/utils/data-structure-selector/data-structure-selector.component.html
@@ -1,26 +1,28 @@
 <div class="selector-options d-flex flex-column">
-    <div class="d-flex align-items-center justify-content-start w-100 mb-2">
+    <div class="d-flex align-items-center justify-content-start w-100 mb-2" (click)="onTypeChange('generic')">
         <odp-round-radio [edit]="edit" [checked]="selectedType == 'generic'" (checkedChange)="onTypeChange('generic')">
         </odp-round-radio>
         <span class="text ml-3">Generic</span>
     </div>
     <div class="d-flex flex-column w-100 mb-2">
-        <div class="d-flex align-items-center justify-content-start w-100">
+        <div class="d-flex align-items-center justify-content-start w-100" (click)="onTypeChange('dataFormat')">
             <odp-round-radio [edit]="edit" [checked]="selectedType == 'dataFormat'"
                 (checkedChange)="onTypeChange('dataFormat')">
             </odp-round-radio>
             <span class="text ml-3">Data Schema</span>
         </div>
-        <span *ngIf="format && selectedType=='dataFormat'" class="text-primary selected-format-name">({{format.name}})</span>
+        <span *ngIf="format && selectedType=='dataFormat'"
+            class="text-primary selected-format-name">({{format.name}})</span>
     </div>
     <div class="d-flex flex-column w-100 mb-2">
-        <div class="d-flex align-items-center justify-content-start w-100">
+        <div class="d-flex align-items-center justify-content-start w-100" (click)="onTypeChange('customFormat')">
             <odp-round-radio [edit]="edit" [checked]="selectedType == 'customFormat'"
                 (checkedChange)="onTypeChange('customFormat')">
             </odp-round-radio>
             <span class="text ml-3">Custom</span>
         </div>
-        <span *ngIf="format && selectedType=='customFormat'" class="text-primary selected-format-name">({{format.name}})</span>
+        <span *ngIf="format && selectedType=='customFormat'"
+            class="text-primary selected-format-name">({{format.name}})</span>
     </div>
 </div>
 
