--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -92,7 +92,7 @@
               <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
                   'fw-600 nav-active': flowRoute.isActive,
                   'nav-inactive': !flowRoute.isActive
-                }">Flows</span>
+                }">Data Pipes</span>
             </div>
           </div>
           <div *ngIf="hasDataFormatPermission" #dataFormatRoute="routerLinkActive"
