--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -9,7 +9,7 @@
 <div class="flow-page d-flex flex-column w-100 bg-light-gray page-padding">
     <div class="d-flex justify-content-between align-items-center w-100 pt-2 pb-4">
         <div class="font-22">
-            <span class="fw-600 mr-2">Flows</span>
+            <span class="fw-600 mr-2">Data Pipes</span>
             <span></span>
         </div>
         <div class="d-flex align-items-center">
@@ -137,7 +137,7 @@
 <div [ngClass]="{'show':showNewFlowWindow}"
     class="new-flow-window p-4 position-fixed border-left bg-white d-flex flex-column" [formGroup]="form">
     <div class="d-flex align-items-center justify-content-between mb-3">
-        <span class="font-22 fw-500">New Flow</span>
+        <span class="font-22 fw-500">New Pipeline</span>
         <span class="dsi dsi-close hover" (click)="showNewFlowWindow=false;"></span>
     </div>
     <div *ngIf="showNewFlowWindow" class="d-flex flex-column w-100">
