--- a/src/app/home/faas/faas-listing/faas-listing.component.html
+++ b/src/app/home/faas/faas-listing/faas-listing.component.html
@@ -23,7 +23,7 @@
   </div>
   <div class="card-container d-flex flex-column w-100 mb-3">
     <div *ngIf="records.length==0" class="rounded-lg border bg-white p-4">
-      <p class="m-0">No Records Found, <button type="button" class="btn btn-link px-1 py-0" (click)="newFaas()">Click
+      <p class="m-0">No functions Found, <button type="button" class="btn btn-link px-1 py-0" (click)="newFaas()">Click
           Here</button> to create a new Function
         <span *ngIf="searchTerm">:&nbsp;<span class="fw-500">{{searchTerm}}</span></span>
       </p>
