--- a/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/service-selector/service-selector.component.html
@@ -8,7 +8,8 @@
 </div>
 <div class="data-format-selector-wrapper">
     <div>
-        <odp-search-box open="true" (enteredText)="searchService($event)" (reset)="clearSearch()"></odp-search-box>
+        <odp-search-box open="true" (enteredText)="searchService($event)" (reset)="clearSearch()" tooltipDir="left">
+        </odp-search-box>
     </div>
     <div class="list-group my-3">
         <div class="list-group-item list-group-item-action d-flex align-items-center justify-content-between hover"
