--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -65,12 +65,12 @@
             </div>
             <div class="list-group-item d-flex align-items-center justify-content-start"
                 *ngFor="let item of records;let i=index">
-                <div class="item-name fw-500">
+                <div class="item-name fw-500" (dblclick)="viewFlow(i)">
                     <span class="ml-2 pl-1 text-dark">{{item.name}}</span>
                     <span class="ml-2 version sub-heading font-11 text-uppercase">(v{{(item.version||1)}})</span>
                     <span *ngIf="item.draftVersion" class="ml-2 draft sub-heading font-11 text-uppercase">(Draft)</span>
                 </div>
-                <div class="d-flex align-items-center">
+                <div class="d-flex align-items-center" (dblclick)="viewFlow(i)">
                     <div class="sub-heading item-status d-flex align-items-center">
                         <span class="text font-12 fw-400">{{item?.inputNode?.type}}</span>
                     </div>
