--- a/src/app/home/data-format-listing/data-format-listing.component.html
+++ b/src/app/home/data-format-listing/data-format-listing.component.html
@@ -50,7 +50,8 @@
       <div *ngIf="!records || records.length==0" class="list-group-item">No Records Found</div>
       <ng-container *ngFor="let dataFormat of records;let i=index">
         <div *ngIf="hasPermissionForDataFormat(dataFormat._id)" class="list-group-item">
-          <div class="d-flex align-items-center justify-content-start h-100" [attr.title]="dataFormat.name">
+          <div class="d-flex align-items-center justify-content-start h-100" [attr.title]="dataFormat.name"
+            (dblclick)="navigate(dataFormat)">
             <div class="item-name text-dark fw-500">{{dataFormat.name}}</div>
             <div class="d-flex align-items-center sub-heading">
               <div class="item-attribute-count text-center">{{dataFormat._attributes}}</div>
