--- a/src/app/home/app-manage/app-manage.component.scss
+++ b/src/app/home/app-manage/app-manage.component.scss
@@ -528,9 +528,12 @@ table {
 }
 
 .upload-section {
-  width: 340px;
+  width: 345px;
+  overflow: auto;
+  height: calc(100vh - 220px);
 }
 
 .preview-section {
   width: calc(100% - 340px);
+  overflow: auto;
 }
