Defect DEF2110 fixed

--- a/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
+++ b/src/app/home/control-panel/user/user-to-group-modal/user-to-group-modal.component.html
@@ -9,7 +9,7 @@
     </ag-grid-angular>
   </div>
 
-  <div class="mt-2" style="float: right">
+  <div class="mt-2 d-flex" style="float: right">
     <button type="button" class="btn btn-outline-primary mr-4 btn-min-width" (click)="closeDialog()" id="closedialog">
       Cancel
     </button>
