--- a/src/app/home/control-panel/user-group/user-group-manage/user-group-author/user-group-author.component.html
+++ b/src/app/home/control-panel/user-group/user-group-manage/user-group-author/user-group-author.component.html
@@ -1,17 +1,29 @@
 <div class="wrapper d-flex align-items-start">
   <div class="d-flex flex-column sub-menu p-3">
     <div class="d-flex flex-column text-muted font-14">
-      <div *ngIf="hasPermission('PVGADS') || hasPermission('PMGADS')" class="px-3 py-2 hover"
+      <div *ngIf="hasPermission('PVGACON') || hasPermission('PMGACON')" class="px-3 py-2 hover"
         [ngClass]="{'text-dark font-weight-bold': activeSubTab==0}" (click)="activeSubTab=0">
+        <span class="">Connectors</span>
+      </div>
+      <div *ngIf="hasPermission('PVGADS') || hasPermission('PMGADS')" class="px-3 py-2 hover"
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==1}" (click)="activeSubTab=1">
         <span class="">Data Services</span>
       </div>
       <div *ngIf="hasPermission('PVGAL') || hasPermission('PMGAL')" class="px-3 py-2 hover"
-        [ngClass]="{'text-dark font-weight-bold': activeSubTab==1}" (click)="activeSubTab=1">
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==2}" (click)="activeSubTab=2">
         <span class="">Library</span>
       </div>
+      <div *ngIf="hasPermission('PVGADF') || hasPermission('PMGADF')" class="px-3 py-2 hover"
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==3}" (click)="activeSubTab=3">
+        <span class="">Data Formats</span>
+      </div>
       <div *ngIf="hasPermission('PVGAF') || hasPermission('PMGAF')" class="px-3 py-2 hover"
-        [ngClass]="{'text-dark font-weight-bold': activeSubTab==2}" (click)="activeSubTab=2">
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==4}" (click)="activeSubTab=4">
         <span class="">Functions</span>
+      </div>
+      <div *ngIf="hasPermission('PVGAA') || hasPermission('PMGAA')" class="px-3 py-2 hover"
+        [ngClass]="{'text-dark font-weight-bold': activeSubTab==6}" (click)="activeSubTab=6">
+        <span class="">Agents</span>
       </div>
       <div *ngIf="hasPermission('PVGAU') || hasPermission('PMGAU')" class="px-3 py-2 hover"
         [ngClass]="{'text-dark font-weight-bold': activeSubTab==8}" (click)="activeSubTab=8">
@@ -32,27 +44,25 @@
     </div>
   </div>
   <div class="permissions-wrapper w-100 h-100">
-    <odp-group-author-data-services *ngIf="activeSubTab==0" [(roles)]="roles" (rolesChange)="onChange($event)"
+    <odp-group-author-connectors *ngIf="activeSubTab==0" [(roles)]="roles" (rolesChange)="onChange($event)"
+      class="w-100">
+    </odp-group-author-connectors>
+    <odp-group-author-data-services *ngIf="activeSubTab==1" [(roles)]="roles" (rolesChange)="onChange($event)"
       class="w-100">
     </odp-group-author-data-services>
-    <odp-group-author-library *ngIf="activeSubTab==1" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
+    <odp-group-author-library *ngIf="activeSubTab==2" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
     </odp-group-author-library>
-    <odp-group-author-functions *ngIf="activeSubTab==2" [(roles)]="roles" (rolesChange)="onChange($event)"
-      class="w-100">
-    </odp-group-author-functions>
-    <odp-group-author-partners *ngIf="activeSubTab==3" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
-    </odp-group-author-partners>
-    <odp-group-author-data-formats *ngIf="activeSubTab==4" [(roles)]="roles" (rolesChange)="onChange($event)"
+    <odp-group-author-data-formats *ngIf="activeSubTab==3" [(roles)]="roles" (rolesChange)="onChange($event)"
       class="w-100">
     </odp-group-author-data-formats>
-    <odp-group-author-nano-services *ngIf="activeSubTab==5" [(roles)]="roles" (rolesChange)="onChange($event)"
+    <odp-group-author-functions *ngIf="activeSubTab==4" [(roles)]="roles" (rolesChange)="onChange($event)"
       class="w-100">
-    </odp-group-author-nano-services>
+    </odp-group-author-functions>
     <odp-group-author-agents *ngIf="activeSubTab==6" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
     </odp-group-author-agents>
-    <odp-group-author-bookmarks *ngIf="activeSubTab==7" [(roles)]="roles" (rolesChange)="onChange($event)"
+    <!-- <odp-group-author-bookmarks *ngIf="activeSubTab==7" [(roles)]="roles" (rolesChange)="onChange($event)"
       class="w-100">
-    </odp-group-author-bookmarks>
+    </odp-group-author-bookmarks> -->
     <odp-group-author-users *ngIf="activeSubTab==8" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
     </odp-group-author-users>
     <odp-group-author-bots *ngIf="activeSubTab==9" [(roles)]="roles" (rolesChange)="onChange($event)" class="w-100">
