--- a/src/app/home/connectors-manage/connectors-manage.component.html
+++ b/src/app/home/connectors-manage/connectors-manage.component.html
@@ -1,1 +1,132 @@
-<p>connectors-manage works!</p>
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+    <div class="align-self-center text-center">
+        <div class="spinner-border text-dark" role="status">
+            <span class="sr-only">Processing...</span>
+        </div>
+        <div class="text-secondary mt-2">Processing...</div>
+    </div>
+</div>
+<div class="d-flex flex-column w-100 h-100 position-relative bg-light-gray">
+    <div class="wrapper">
+        <div class="w-100 position-relative px-4 py-5">
+            <odp-basic-info hideLogo="true" [(name)]="connector.name" [(description)]="connector.description"
+                [hideLogo]="true" [edit]="{status:editBasicDetails}">
+                <div class="d-flex align-items-end align-self-start">
+                    <button *ngIf="hasPermission('PMCONBD') && edit.status" type="button"
+                        class="btn btn-white border mr-3" (click)="deleteConnector()">
+                        <span class="dsi dsi-trash"></span>
+                    </button>
+                    <button class="btn btn-white border btn-min-width mr-3" routerLink="../">
+                        <span>Cancel</span>
+                    </button>
+                    <ng-container *ngIf="hasPermissionStartsWith('PMCON')">
+                        <button *ngIf="!edit.status" class="btn btn-primary btn-min-width" (click)="edit.status=true">
+                            <span>Edit</span>
+                        </button>
+                        <button *ngIf="edit.status" class="btn btn-primary btn-min-width" (click)="saveConnector()">
+                            <span>Save</span>
+                        </button>
+                    </ng-container>
+                </div>
+            </odp-basic-info>
+        </div>
+        <div class="d-flex flex-column px-4 pb-4">
+            <div class="d-flex flex-column w-100 h-100 bg-white rounded border p-4">
+                <div class="form-group">
+                    <label class="text-secondary font-12 fw-500" for="type">Select Connector Type</label>
+                    <select id="type" class="form-control" [(ngModel)]="connector.type" [disabled]="!edit.status" (ngModelChange)="onTypeChange($event)">
+                        <option value="">--select--</option>
+                        <option value="MONGODB">MongoDB</option>
+                        <option value="MYSQL">MySQL</option>
+                        <option value="PG">Postgres SQL</option>
+                        <option value="SFTP">SFTP</option>
+                        <option value="KAFKA">Apache Kafka</option>
+                        <option value="AZBLOB">Azure Blob</option>
+                    </select>
+                </div>
+                <ng-container *ngIf="connector.type=='MONGODB'">
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
+                        <input id="connectionString" type="text" class="form-control"
+                            [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="connector.type=='MYSQL' || connector.type=='PG'">
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="host">Database Host</label>
+                        <input id="host" type="text" class="form-control" [(ngModel)]="connector.values.host"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="port">Database Port</label>
+                        <input id="port" type="text" class="form-control" [(ngModel)]="connector.values.port"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="user">Database User</label>
+                        <input id="user" type="text" class="form-control" [(ngModel)]="connector.values.user"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="password">Database password</label>
+                        <input id="password" type="password" class="form-control"
+                            [(ngModel)]="connector.values.password" [disabled]="!edit.status">
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="connector.type=='SFTP'">
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="host">SFTP Host</label>
+                        <input id="host" type="text" class="form-control" [(ngModel)]="connector.values.host"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="port">SFTP Port</label>
+                        <input id="port" type="text" class="form-control" [(ngModel)]="connector.values.port"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="keyFile">SFTP Key File</label>
+                        <input id="keyFile" type="text" class="form-control" [(ngModel)]="connector.values.port"
+                            [disabled]="!edit.status">
+                    </div>
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="keyFilePassword">SFTP Key File Password</label>
+                        <input id="keyFilePassword" type="password" class="form-control"
+                            [(ngModel)]="connector.values.password" [disabled]="!edit.status">
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="connector.type=='KAFKA'">
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
+                        <input id="connectionString" type="text" class="form-control"
+                            [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
+                    </div>
+                </ng-container>
+                <ng-container *ngIf="connector.type=='AZBLOB'">
+                    <div class="form-group">
+                        <label class="text-secondary font-12 fw-500" for="connectionString">MongoDB Connection URL</label>
+                        <input id="connectionString" type="text" class="form-control"
+                            [(ngModel)]="connector.values.connectionString" [disabled]="!edit.status">
+                    </div>
+                </ng-container>
+            </div>
+        </div>
+    </div>
+
+    <odp-delete-modal [open]="openDeleteModal" (close)="closeDeleteModal($event)"></odp-delete-modal>
+
+    <ng-template #pageChangeModalTemplate>
+        <div class="modal-body p-4">
+            <div class="circle bg-dark">
+                <span class="fa fa-exclamation-triangle text-white"></span>
+            </div>
+            <p class="text-dark font-weight-bold text-center">Unsaved changes</p>
+            <p class="text-secondary text-center">You have unsaved changes, are you sure you want to leave?</p>
+            <div class="d-flex align-items-center justify-content-end">
+                <button type="button" class="btn btn-min-width btn-outline-primary mx-3"
+                    (click)="pageChangeModalTemplateRef.close(false)">No</button>
+                <button type="button" class="btn btn-min-width btn-primary mx-3"
+                    (click)="pageChangeModalTemplateRef.close(true)">Yes</button>
+            </div>
+        </div>
+    </ng-template>
